Initial revision of systems/components database and manipulation infrastructure.
Signed-off-by: J <j@openmesh.network>

--- a/lib/components/openmesh/xnode-one/components/controller/components/Makefile
+++ b/lib/components/openmesh/xnode-one/components/controller/components/Makefile
@@ -1,9 +1,11 @@
-TARGETS: components
+TARGETS: application infrastructure
 
 .PHONY: build clean setup
 
 $(TARGETS):
 	@$(MAKE) -s -C $@
+
+application: infrastructure
 
 $(foreach TARGET,$(TARGETS),$(TARGET)-build):
 	@$(MAKE) -s -C $(subst -build,'',$@) build
