Fixup errors which led to make execution failures on correction of syntactical bugs
Signed-off-by: J <j@openmesh.network>

--- a/lib/components/openmesh/Makefile
+++ b/lib/components/openmesh/Makefile
@@ -1,4 +1,4 @@
-TARGETS: core decentralised-cloud-initiative xnode xnode-one
+TARGETS = core decentralised-cloud-initiative xnode xnode-one
 
 .PHONY: build clean setup
 
