We need to be able to ensure complete configurability of make options in tree.
Signed-off-by: J <j@openmesh.network>

--- a/lib/components/Makefile
+++ b/lib/components/Makefile
@@ -3,16 +3,16 @@ TARGETS = openmesh
 .PHONY: build clean setup
 
 $(TARGETS):
-	@$(MAKE) -s -C $@
+	@$(MAKE) ${MFLAGS} -C $@
 
 $(foreach TARGET,$(TARGETS),$(TARGET)-build):
-	@$(MAKE) -s -C $(subst -build,'',$@) build
+	@$(MAKE) ${MFLAGS} -C $(subst -build,'',$@) build
 
 $(foreach TARGET,$(TARGETS),$(TARGET)-clean):
-	@$(MAKE) -s -C $(subst -clean,'',$@) clean
+	@$(MAKE) ${MFLAGS} -C $(subst -clean,'',$@) clean
 
 $(foreach TARGET,$(TARGETS),$(TARGET)-setup):
-	@$(MAKE) -s -C $(subst -setup,'',$@) setup
+	@$(MAKE) ${MFLAGS} -C $(subst -setup,'',$@) setup
 
 build: $(foreach TARGET,$(TARGETS),$(TARGET)-build)
 
