--- a/lib/components/openmesh/xnode/os/components/installers/Makefile
+++ b/lib/components/openmesh/xnode/os/components/installers/Makefile
@@ -3,16 +3,16 @@ TARGETS = assimilate
 .PHONY: build clean setup
 
 $(TARGETS):
-	@$(MAKE) ${MFLAGS} -C $@
+	@$(MAKE) $(MFLAGS) -C $@
 
 $(foreach TARGET,$(TARGETS),$(TARGET)-build):
-	@$(MAKE) ${MFLAGS} -C $(subst -build,,$@) build
+	@$(MAKE) $(MFLAGS) -C $(subst -build,,$@) build
 
 $(foreach TARGET,$(TARGETS),$(TARGET)-clean):
-	@$(MAKE) ${MFLAGS} -C $(subst -clean,,$@) clean
+	@$(MAKE) $(MFLAGS) -C $(subst -clean,,$@) clean
 
 $(foreach TARGET,$(TARGETS),$(TARGET)-setup):
-	@$(MAKE) ${MFLAGS} -C $(subst -setup,,$@) setup
+	@$(MAKE) $(MFLAGS) -C $(subst -setup,,$@) setup
 
 build: $(foreach TARGET,$(TARGETS),$(TARGET)-build)
 
